# rppg-gui

./: Cargo.toml  README.md  face_extraction.py  fft_extraction.py  main.py  pyproject.toml  requirements.txt  rppg_extraction.py
src/: main.rs
