[package]
name = "rppg-gui"
version = "0.1.0"
edition = "2024"

[features]
default = ["nokhwa/default"]

[dependencies]
flume = "0.10.14"
once_cell = "1.16.0"
color-eyre = "0.6.2"

[dependencies.ggez]
version = "0.8.1"
default-features = false

[dependencies.clap]
version = "4.0.20"
features = ["derive"]

# Use these as you need
[dependencies.nokhwa]
version = "0.10.7"
features = ["input-native", "output-threaded"]

[dependencies.image]
version = "0.24.5"
features = ["png"]
